Fixed alignment issue on Users

--- a/public/stylesheets/zed9.css
+++ b/public/stylesheets/zed9.css
@@ -2436,7 +2436,7 @@ p.comp_activity {
 }
 
 #users ol {
-	padding: 12px 0px 24px 20px;
+	padding: 12px 0px 24px 0px;
 }
 
 #users li {
